# Pathology-Foundation-Model-Benchmark

./: .gitignore  LICENSE  README.md  env.yaml  launch_train.sh  launch_train_slurm.sh  pyproject.toml  results_tables.xlsx  sub_test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design-doc.md  feature_request.yml
.github/workflows/: build.yaml  ci.yaml  test.yaml
config/: dinov2_vits14_voc2012_ms_config.py
configs/: arctique_config_debug.yaml  arctique_provgigapath_config_aug.yaml  arctique_uni_config_aug.yaml  config.yaml  config_dpt.yaml  config_dpt_schuerch.yaml  config_unetr.yaml  config_unetr_arctique.yaml  config_unetr_lizard.yaml  config_unetr_pannuke.yaml  config_unetr_schuerch.yaml  hovernext_config.yaml  hovernext_config_real.yaml  inference_lizard_config.yaml  lizard_config.yaml  lizard_config_2.yaml  lizard_provgigapath_config_aug.yaml  lizard_uni_config_aug.yaml  m2f_config.yaml  m2f_config_old.yaml  mask2former_lizard.json  schuerch_config.yaml  schuerch_config_debug.yaml  schuerch_provgigapath_config.yaml  schuerch_provgigapath_config_aug.yaml  schuerch_uni_config_aug.yaml
configs/HoverNext_experiment_1/: arctique_config.yaml  lizard_config.yaml  lizard_domain_shift_glas_config.yaml  pannuke_config.yaml  schuerch_config.yaml  schuerch_config_domain_shift_clr.yaml  schuerch_config_domain_shift_msi.yaml  schuerch_config_domain_shift_mucinous.yaml  schuerch_config_domain_shift_stage4.yaml
configs/HoverNext_experiment_1/data_efficiency/: lizard_10_percent_train_config.yaml  lizard_20_percent_train_config.yaml  lizard_50_percent_train_config.yaml  lizard_5_percent_train_config.yaml  schuerch_10_percent_train_config.yaml  schuerch_20_percent_train_config.yaml  schuerch_50_percent_train_config.yaml  schuerch_5_percent_train_config.yaml
configs/SimpleModel_experiment_1/: arctique_config_aug.yaml  lizard_config_aug.yaml  pannuke_config_aug.yaml  schuerch_config_aug.yaml
configs/SimpleModel_experiment_1/lizard_domain_shift/: lizard_domaingen_consep.yaml  lizard_domaingen_crag.yaml  lizard_domaingen_dpath.yaml  lizard_domaingen_glas.yaml  lizard_domaingen_pannuke.yaml
configs/UNETR_lizard_domain_gap_experiment_1/: lizard_domain_shift_glas.yaml
configs/ablations/: exp0_linear_model.yaml  exp1_unetr.yaml  exp2_unetr_aug.yaml  exp3_unetr_aug_sampling.yaml  exp4_unetr_aug_sampling_focalloss.yaml  exp5_unetr_aug_sampling_focalloss_unfreeze.yaml
configs/configs_backup/: arctique_provgigapath_config_aug.yaml  arctique_uni_config_aug.yaml  schuerch_config_debug.yaml
configs/configs_backup/linconv_experiment_1/: arctique_musk_config_aug.yaml  arctique_uni2_config_aug.yaml  lizard_musk_config_aug.yaml  lizard_phikonv2_config_aug.yaml  lizard_uni2_config_aug.yaml  lizard_uni_config_aug.yaml  lizard_virchow2_config_aug.yaml  pannuke_musk_config_aug.yaml  pannuke_phikonv2_config_aug.yaml  pannuke_provgigapath_config_aug.yaml  pannuke_titan_config_aug.yaml  pannuke_virchow2_config_aug.yaml  schuerch_uni2_config_aug.yaml  schuerch_uni_config_aug.yaml  schuerch_virchow2_config_aug.yaml
configs/configs_backup/models/: phikonv2.yaml  provgigapath.yaml  titan.yaml  uni.yaml  uni2.yaml  virchow2.yaml
configs/linconv_experiment_1/: arctique_config_aug.yaml  arctique_phikonv2_config_aug.yaml  arctique_provgigapath_config_aug.yaml  arctique_titan_config_aug.yaml  arctique_uni_config_aug.yaml  arctique_virchow2_config_aug.yaml  lizard_config_aug.yaml  lizard_provgigapath_config_aug.yaml  lizard_titan_config_aug.yaml  pannuke_config_aug.yaml  pannuke_uni2_config_aug.yaml  pannuke_uni_config_aug.yaml  schuerch_config_aug.yaml  schuerch_musk_config_aug.yaml  schuerch_phikonv2_config_aug.yaml  schuerch_provgigapath_config_aug.yaml  schuerch_titan_config_aug.yaml
configs/models/: musk.yaml  phikonv2.yaml  provgigapath.yaml  titan.yaml  uni.yaml  uni2.yaml  virchow2.yaml
data_generation_notebook/: create_small_train_dataset.ipynb  domain_shift_lizard.ipynb
notebooks/: run_notebook.sh
src/: calibration.py  main.py  test.py  test_m2f_hf.py
src/backbones/: __init__.py  bn_head.py  ce_loss.py  encoder_decoder_m2f.py  vision_tranformer.py
src/benchmark/: augmentations.py  blocks.py  custom_augmentations.py  dataset.py  dpt.py  eval.py  eval_utils.py  hovernext.py  inference.py  init_dist.py  lmdb_dataset.py  m2f_hf_wrapper.py  m2f_wrapper.py  mask2former.py  metric_utils.py  model.py  model_wrapper.py  simple_segmentation_model.py  split_to_tiles.py  tiles_2_lmdb.py  tiles_to_lmdb.py  train.py  unetr.py  utils.py
src/benchmark/augmentations/: augmentations.py  custom_augmentations.py
tests/: test_augmentations.py  test_custom_augmentations.py  test_dataset.py  test_eval.py  test_lmdb_dataset.py  test_mask2former.py  test_metric_utils.py  test_split_to_tiles.py  test_tiles_to_lmdb.py  test_train.py  test_unetr.py
tests/test_data/: label_dict.json  lizard_class_mapping.json  small_lizard_train_test_val_split.csv
(+16 files in other folders)
